# pytest-topo

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
src/pytest_topo/: plugin.py  topo.py
tests/: test_main.py  test_skipping.py
