[project]
name = "pytest-topo"
version = "0.0.2"
authors = [
  { name="Nick Sullivan", email="nick.dave.sullivan@gmail.com" },
]
description = "Topological sorting for pytest"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest==8.2.1",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"


